k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotseek-website
  namespace: dotseek
  labels:
    app: dotseek-website
spec:
  type: ClusterIP
  selector:
    app: dotseek-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
